# FX

./: .env.template  .gitignore  04_実行.xlsm  08_損益計算 .xlsm  08_損益計算v2 .xlsm  AGENTS.md  CLAUDE.md  Module1.bas  OnOff最適化.bas  PRODUCTION_TEST_CHECKLIST.md  REVIEW_PROMPT.md  REVIEW_PROMPT_WEEK3.md  REVIEW_PROMPT_WEEK6.md  WEEK6_PKG_IMPLEMENTATION_REPORT.md  deploy.sh  initial_setting_list_os.xlsx  production.env.template  pyproject.toml  requirements.txt  restore_high_performance.py  run_all_tests.py  simple_test.py  test_original_strategy.py  test_pkg_trading_signal.py  test_restored_performance.py  test_system_integration.py  trade_setting.csv  パターン表.bas  作業ログ.txt  共通ライブラリ.bas  損益計算検証用.xlsm  最大損失計算.xlsx
.serena/: project.yml
data/: EURJPY_5years_backtest_results.json  EURJPY_M15_3months_results.json  EURJPY_M15_3months_results_trades.csv  EURJPY_M15_backtest_results.json  EURJPY_M15_backtest_results_trades.csv  EURJPY_adaptive_backtest_trades.csv  EURJPY_backtest_results.json  EURJPY_backtest_results_trades.csv  EURJPY_optimized_backtest_results.json  EURJPY_optimized_backtest_trades.csv  EURJPY_restored_performance.json  EURUSD_5years_backtest_results.json  EURUSD_M15_3months_results.json  EURUSD_M15_3months_results_trades.csv  EURUSD_adaptive_backtest_results.json  EURUSD_adaptive_backtest_trades.csv  EURUSD_optimized_backtest_results.json  EURUSD_optimized_backtest_trades.csv  GBPJPY_M15_3months_results.json  GBPJPY_M15_3months_results_trades.csv  GBPJPY_optimized_backtest_results.json  GBPJPY_optimized_backtest_trades.csv  USDJPY_5years_backtest_results.json  (+13 more)
(+830 files in other folders)
