[tool.poetry]
name = "fx-trading-system"
version = "0.1.0"
description = "FX Trading System based on Operation Logic"
authors = ["FX Trading Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
numpy = "^1.24.0"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
streamlit = "^1.28.0"
oandapyv20 = "^0.7.2"
yfinance = "^0.2.0"
ta-lib = "^0.4.28"
sqlite-utils = "^3.35.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true